# dacdaq

./: .gitignore  README.md  TODO.md  pyproject.toml
dacdaq/: gpib_example.py  main.py  mainwindow.py  read_data.py  write_data.py
dacdaq/instruments/prema/: prema6000.py
dacdaq/ui/: dacdac.ui  mainwindow.ui
myqttest/: myqttest.pyproject
