[tool.poetry]
name = "dacdaq"
version = "0.1.0"
description = "Diamond anvil cell data acquisition"
authors = ["James J. Hamlin"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
pyside6 = "^6.7.0"
pyqt6 = "^6.7.0"
qt6-tools = "^6.5.0.1.3"
pyqtgraph = "^0.13.7"
pyvisa = "^1.14.1"
ipython = "^8.25.0"
pyvisa-py = "^0.7.2"
psutil = "^6.0.0"
zeroconf = "^0.132.2"
pyusb = "^1.2.1"
gpib-ctypes = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
